--- a/MPfm/MPfm.iOS/XIB/iPhone/MobileLibraryBrowserViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/MobileLibraryBrowserViewController_iPhone.xib
@@ -41,7 +41,7 @@
 					<object class="IBUITableView" id="897877131">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{0, 88}, {320, 372}}</string>
+						<string key="NSFrame">{{0, 75}, {320, 385}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -65,6 +65,7 @@
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="877569748"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -77,7 +78,7 @@
 							<object class="IBUIImageView" id="933173274">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{88, 88}</string>
+								<string key="NSFrameSize">{75, 75}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="723437543"/>
@@ -89,7 +90,7 @@
 							<object class="IBUILabel" id="723437543">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{93, 1}, {194, 24}}</string>
+								<string key="NSFrame">{{82, 1}, {194, 24}}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="850507316"/>
@@ -104,11 +105,13 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
+									<string key="name">HelveticaNeue-Light</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
 									<double key="pointSize">16</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">16</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -117,7 +120,7 @@
 							<object class="IBUILabel" id="850507316">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{93, 24}, {194, 24}}</string>
+								<string key="NSFrame">{{82, 20}, {194, 24}}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="400228597"/>
@@ -135,11 +138,13 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
+									<string key="name">HelveticaNeue-Light</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
 									<double key="pointSize">14</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -148,7 +153,7 @@
 							<object class="IBUILabel" id="400228597">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{93, 46}, {194, 20}}</string>
+								<string key="NSFrame">{{82, 39}, {194, 20}}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="236045359"/>
@@ -165,12 +170,14 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="738750897">
-									<int key="type">1</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="108245089">
+									<string key="name">HelveticaNeue-Light</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
 									<double key="pointSize">12</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="30079834">
-									<string key="NSName">Helvetica</string>
+								<object class="NSFont" key="IBUIFont" id="247842519">
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">12</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -179,7 +186,7 @@
 							<object class="IBUILabel" id="236045359">
 								<reference key="NSNextResponder" ref="877569748"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{93, 65}, {194, 20}}</string>
+								<string key="NSFrame">{{82, 54}, {194, 20}}</string>
 								<reference key="NSSuperview" ref="877569748"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="897877131"/>
@@ -193,12 +200,12 @@
 								<reference key="IBUITextColor" ref="766924172"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="738750897"/>
-								<reference key="IBUIFont" ref="30079834"/>
+								<reference key="IBUIFontDescription" ref="108245089"/>
+								<reference key="IBUIFont" ref="247842519"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
-						<string key="NSFrameSize">{320, 88}</string>
+						<string key="NSFrameSize">{320, 75}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="933173274"/>
@@ -213,7 +220,7 @@
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="877569748"/>
+				<reference key="NSNextKeyView" ref="104753175"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
