--- a/MPfm/MPfm.iOS/XIB/iPhone/PitchShiftingViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/PitchShiftingViewController_iPhone.xib
@@ -63,13 +63,13 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<string key="name">HelveticaNeue-Bold</string>
+									<string key="name">HelveticaNeue-Light</string>
 									<string key="family">Helvetica Neue</string>
-									<int key="traits">2</int>
+									<int key="traits">0</int>
 									<double key="pointSize">18</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">HelveticaNeue-Bold</string>
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">18</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -96,7 +96,6 @@
 								<string key="NSFrame">{{136, 190}, {164, 40}}</string>
 								<reference key="NSSuperview" ref="63380813"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -112,14 +111,14 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="948290338">
-									<string key="name">HelveticaNeue-Bold</string>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="700397248">
+									<string key="name">HelveticaNeue</string>
 									<string key="family">Helvetica Neue</string>
-									<int key="traits">2</int>
+									<int key="traits">0</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="563136131">
-									<string key="NSName">HelveticaNeue-Bold</string>
+								<object class="NSFont" key="IBUIFont" id="97404928">
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -146,8 +145,8 @@
 									</object>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="992243602"/>
-								<reference key="IBUIFontDescription" ref="948290338"/>
-								<reference key="IBUIFont" ref="563136131"/>
+								<reference key="IBUIFontDescription" ref="700397248"/>
+								<reference key="IBUIFont" ref="97404928"/>
 							</object>
 							<object class="IBUIButton" id="567081170">
 								<reference key="NSNextResponder" ref="63380813"/>
@@ -169,8 +168,8 @@
 									<reference key="NSCustomColorSpace" ref="285115043"/>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="992243602"/>
-								<reference key="IBUIFontDescription" ref="948290338"/>
-								<reference key="IBUIFont" ref="563136131"/>
+								<reference key="IBUIFontDescription" ref="700397248"/>
+								<reference key="IBUIFont" ref="97404928"/>
 							</object>
 							<object class="IBUILabel" id="631387758">
 								<reference key="NSNextResponder" ref="63380813"/>
@@ -195,17 +194,13 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="700397248">
-									<string key="name">HelveticaNeue</string>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="932022318">
+									<string key="name">HelveticaNeue-Light</string>
 									<string key="family">Helvetica Neue</string>
 									<int key="traits">0</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="656013672">
-									<string key="NSName">HelveticaNeue-Medium</string>
-									<double key="NSSize">14</double>
-									<int key="NSfFlags">16</int>
-								</object>
+								<reference key="IBUIFont" ref="97404928"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="510910682">
@@ -229,14 +224,14 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="548960633">
-									<string key="name">HelveticaNeue-Bold</string>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="259442358">
+									<string key="name">HelveticaNeue-Medium</string>
 									<string key="family">Helvetica Neue</string>
-									<int key="traits">2</int>
+									<int key="traits">0</int>
 									<double key="pointSize">16</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="890094438">
-									<string key="NSName">HelveticaNeue-Bold</string>
+								<object class="NSFont" key="IBUIFont" id="906026205">
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">16</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -263,8 +258,8 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="700397248"/>
-								<reference key="IBUIFont" ref="656013672"/>
+								<reference key="IBUIFontDescription" ref="932022318"/>
+								<reference key="IBUIFont" ref="97404928"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="187062087">
@@ -288,8 +283,8 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="548960633"/>
-								<reference key="IBUIFont" ref="890094438"/>
+								<reference key="IBUIFontDescription" ref="259442358"/>
+								<reference key="IBUIFont" ref="906026205"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="417760050">
@@ -314,8 +309,8 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
-								<reference key="IBUIFontDescription" ref="700397248"/>
-								<reference key="IBUIFont" ref="656013672"/>
+								<reference key="IBUIFontDescription" ref="932022318"/>
+								<reference key="IBUIFont" ref="97404928"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="669877488">
@@ -340,8 +335,8 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
-								<reference key="IBUIFontDescription" ref="548960633"/>
-								<reference key="IBUIFont" ref="890094438"/>
+								<reference key="IBUIFontDescription" ref="259442358"/>
+								<reference key="IBUIFont" ref="906026205"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUIButton" id="74030863">
@@ -360,8 +355,8 @@
 								<reference key="IBUIHighlightedTitleColor" ref="83981306"/>
 								<reference key="IBUINormalTitleColor" ref="83981306"/>
 								<reference key="IBUINormalTitleShadowColor" ref="992243602"/>
-								<reference key="IBUIFontDescription" ref="948290338"/>
-								<reference key="IBUIFont" ref="563136131"/>
+								<reference key="IBUIFontDescription" ref="700397248"/>
+								<reference key="IBUIFont" ref="97404928"/>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 460}</string>
