--- a/MPfm/MPfm.iOS/XIB/iPhone/TimeShiftingViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/TimeShiftingViewController_iPhone.xib
@@ -63,13 +63,13 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<string key="name">HelveticaNeue-Bold</string>
+									<string key="name">HelveticaNeue-Light</string>
 									<string key="family">Helvetica Neue</string>
-									<int key="traits">2</int>
+									<int key="traits">0</int>
 									<double key="pointSize">18</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">HelveticaNeue-Bold</string>
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">18</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -114,8 +114,8 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="1026281612">
-									<string key="name">HelveticaNeue</string>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="209577675">
+									<string key="name">HelveticaNeue-Light</string>
 									<string key="family">Helvetica Neue</string>
 									<int key="traits">0</int>
 									<double key="pointSize">14</double>
@@ -148,14 +148,14 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="535333824">
-									<string key="name">HelveticaNeue-Bold</string>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="748407258">
+									<string key="name">HelveticaNeue-Medium</string>
 									<string key="family">Helvetica Neue</string>
-									<int key="traits">2</int>
+									<int key="traits">0</int>
 									<double key="pointSize">16</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="544768765">
-									<string key="NSName">HelveticaNeue-Bold</string>
+								<object class="NSFont" key="IBUIFont" id="176802955">
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">16</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -182,7 +182,7 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="1026281612"/>
+								<reference key="IBUIFontDescription" ref="209577675"/>
 								<reference key="IBUIFont" ref="71271790"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
@@ -207,8 +207,8 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="535333824"/>
-								<reference key="IBUIFont" ref="544768765"/>
+								<reference key="IBUIFontDescription" ref="748407258"/>
+								<reference key="IBUIFont" ref="176802955"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="14679880">
@@ -233,7 +233,7 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
-								<reference key="IBUIFontDescription" ref="1026281612"/>
+								<reference key="IBUIFontDescription" ref="209577675"/>
 								<reference key="IBUIFont" ref="71271790"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
@@ -259,8 +259,8 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
-								<reference key="IBUIFontDescription" ref="535333824"/>
-								<reference key="IBUIFont" ref="544768765"/>
+								<reference key="IBUIFontDescription" ref="748407258"/>
+								<reference key="IBUIFont" ref="176802955"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUIButton" id="680978106">
@@ -284,17 +284,13 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="527987660">
-									<string key="name">HelveticaNeue-Bold</string>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="1026281612">
+									<string key="name">HelveticaNeue</string>
 									<string key="family">Helvetica Neue</string>
-									<int key="traits">2</int>
+									<int key="traits">0</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="316034024">
-									<string key="NSName">HelveticaNeue-Bold</string>
-									<double key="NSSize">14</double>
-									<int key="NSfFlags">16</int>
-								</object>
+								<reference key="IBUIFont" ref="71271790"/>
 							</object>
 							<object class="IBUIButton" id="813914206">
 								<reference key="NSNextResponder" ref="817949346"/>
@@ -312,8 +308,8 @@
 								<reference key="IBUIHighlightedTitleColor" ref="402452481"/>
 								<reference key="IBUINormalTitleColor" ref="402452481"/>
 								<reference key="IBUINormalTitleShadowColor" ref="924540298"/>
-								<reference key="IBUIFontDescription" ref="527987660"/>
-								<reference key="IBUIFont" ref="316034024"/>
+								<reference key="IBUIFontDescription" ref="1026281612"/>
+								<reference key="IBUIFont" ref="71271790"/>
 							</object>
 							<object class="IBUIButton" id="557376947">
 								<reference key="NSNextResponder" ref="817949346"/>
@@ -337,8 +333,8 @@
 									</object>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="924540298"/>
-								<reference key="IBUIFontDescription" ref="527987660"/>
-								<reference key="IBUIFont" ref="316034024"/>
+								<reference key="IBUIFontDescription" ref="1026281612"/>
+								<reference key="IBUIFont" ref="71271790"/>
 							</object>
 							<object class="IBUIButton" id="518971293">
 								<reference key="NSNextResponder" ref="817949346"/>
@@ -360,8 +356,8 @@
 									<reference key="NSCustomColorSpace" ref="845255593"/>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="924540298"/>
-								<reference key="IBUIFontDescription" ref="527987660"/>
-								<reference key="IBUIFont" ref="316034024"/>
+								<reference key="IBUIFontDescription" ref="1026281612"/>
+								<reference key="IBUIFont" ref="71271790"/>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 460}</string>
@@ -677,7 +673,119 @@
 			<nil key="sourceID"/>
 			<int key="maxID">61</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">MPfmSemiTransparentButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MPfmSemiTransparentButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">TimeShiftingViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="actionDecrementTempo:">id</string>
+						<string key="actionIncrementTempo:">id</string>
+						<string key="actionReset:">id</string>
+						<string key="actionUseTempo:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="actionDecrementTempo:">
+							<string key="name">actionDecrementTempo:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="actionIncrementTempo:">
+							<string key="name">actionIncrementTempo:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="actionReset:">
+							<string key="name">actionReset:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="actionUseTempo:">
+							<string key="name">actionUseTempo:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="btnDecrementTempo">MPfmSemiTransparentButton</string>
+						<string key="btnIncrementTempo">MPfmSemiTransparentButton</string>
+						<string key="btnReset">UIButton</string>
+						<string key="btnUseTempo">UIButton</string>
+						<string key="lblCurrentTempo">UILabel</string>
+						<string key="lblCurrentTempoValue">UILabel</string>
+						<string key="lblDetectedTempo">UILabel</string>
+						<string key="lblDetectedTempoValue">UILabel</string>
+						<string key="lblReferenceTempo">UILabel</string>
+						<string key="lblReferenceTempoValue">UILabel</string>
+						<string key="lblTitle">UILabel</string>
+						<string key="slider">UISlider</string>
+						<string key="viewBackground">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="btnDecrementTempo">
+							<string key="name">btnDecrementTempo</string>
+							<string key="candidateClassName">MPfmSemiTransparentButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="btnIncrementTempo">
+							<string key="name">btnIncrementTempo</string>
+							<string key="candidateClassName">MPfmSemiTransparentButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="btnReset">
+							<string key="name">btnReset</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="btnUseTempo">
+							<string key="name">btnUseTempo</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lblCurrentTempo">
+							<string key="name">lblCurrentTempo</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lblCurrentTempoValue">
+							<string key="name">lblCurrentTempoValue</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lblDetectedTempo">
+							<string key="name">lblDetectedTempo</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lblDetectedTempoValue">
+							<string key="name">lblDetectedTempoValue</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lblReferenceTempo">
+							<string key="name">lblReferenceTempo</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lblReferenceTempoValue">
+							<string key="name">lblReferenceTempoValue</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lblTitle">
+							<string key="name">lblTitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="slider">
+							<string key="name">slider</string>
+							<string key="candidateClassName">UISlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="viewBackground">
+							<string key="name">viewBackground</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TimeShiftingViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
